added file upload over sockets

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -1,35 +1,72 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>File Upload</title>
     <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
+
+      #dropzone {
+        width:150px;
+        height:150px;
+        border: 3px dashed lightblue;
+      }
+
+      .active {
+        border: 3px dashed red;
+      }
+
     </style>
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
+
+    <div id="dropzone"></div>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="libs/jquery/dist/jquery.js"></script>
-		<script>
-		  var socket = io();
-		  $('form').submit(function(){
-		    socket.emit('chat message', $('#m').val());
-		    $('#m').val('');
-		    return false;
-		  });
-			socket.on('chat message', function(msg){
-				$('#messages').append($('<li>').text(msg));
-			});
-		</script>
+    <script>
+
+      var socket = io();
+
+      socket.on("upload result", function(msg) {
+        console.log(msg);
+      });
+
+      window.addEventListener("DOMContentLoaded", function() {
+
+        var dropzone = document.getElementById("dropzone");
+
+        dropzone.addEventListener("dragover", function(e) {
+          e.preventDefault();
+          dropzone.classList.add("active");
+        });
+
+        dropzone.addEventListener("dragleave", function(e) {
+          dropzone.classList.remove("active");
+        });
+
+        dropzone.addEventListener("drop", function(e) {
+          e.preventDefault();
+          dropzone.classList.remove("active");
+
+
+          var file = e.dataTransfer.files[0];
+
+          var fr = new FileReader();
+          fr.readAsArrayBuffer(file);
+          fr.addEventListener("loadend", function() {
+
+            socket.emit("upload", {
+              fileName: file.name,
+              fileData: fr.result
+            });
+
+          });
+
+        });
+
+      });
+
+
+
+    </script>
+
+
   </body>
 </html>
